feat: change from, to with non conflict names startDate, endDate